# verde-lsp

./: .gitignore  .mise.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  LICENSE  README.md  plan.md  scrum.ts
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/lsp-feature-gap/: README.md  RESEARCH.md
src/: analysis.rs  call_hierarchy.rs  code_action.rs  completion.rs  definition.rs  document_highlight.rs  document_symbol.rs  folding_range.rs  formatting.rs  hover.rs  inlay_hint.rs  lib.rs  main.rs  parser.rs  references.rs  rename.rs  semantic_tokens.rs  server.rs  signature_help.rs  type_definition.rs  vba_builtins.rs  workspace_symbol.rs
src/analysis/: diagnostics.rs  mod.rs  resolve.rs  symbols.rs
src/excel_model/: context.rs  mod.rs  types.rs
src/parser/: ast.rs  lexer.rs  parse.rs
tests/: call_hierarchy.rs  code_action.rs  completion.rs  definition.rs  document_highlight.rs  document_symbol.rs  e2e_stdio.rs  folding_range.rs  formatting.rs  hover.rs  inlay_hint.rs  option_explicit.rs  references.rs  rename.rs  signature_help.rs  workbook.rs  workspace_symbol.rs
tests/fixtures/: README.md
tests/fixtures/advanced/: array_operations.bas  call_patterns.bas  collections.bas  declare_api.bas  deftype.bas  file_io.bas  let_set_new.bas  like_operator.bas  misc_statements.bas  paramarray_optional.bas  redim_preserve.bas
tests/fixtures/basic/: access_modifiers.bas  const_declaration.bas  dim_declarations.bas  enum_declaration.bas  function_declaration.bas  property_procedures.cls  scope_and_lifetime.bas  sub_declaration.bas  (+1 more)
(+47 files in other folders)
